@@ -7,10 +7,10 @@
 #define ARRAY_OVERALLOC 8
 
 typedef struct {
-  uint64  a;
-  uint64  u;
-  uint32  es;
-  char    *x;
+  char *x;
+  uint64 a;
+  uint64 u;
+  uint32 es;
 } array;
 
 int array_init(array *, uint64, uint32);
@@ -25,7 +25,7 @@ uint64 array_size(array *);
 uint64 array_bytes(array *);
 void *array_data(array *);
 
-#define new_array {0,0,0}
+#define array_INIT {0,0,0,0}
 #define array_SIZE(a) ((a)->u)
 #define array_BYTES(a) ((a)->u * (a)->es)
 #define array_DATA(a) ((a)->x)
